<resources>
    <string name="app_name">12er-Spiel</string>
    <string name="undo">Rückgängig</string>
    <string name="button_next_player">Weiter</string>
    <string name="overview"><a href="">Übersicht</a></string>
    <string name="button_load_game">Spiel fortsetzen</string>
    <string name="button_statistics">Statistik</string>
    <string name="button_create_new_game">Neues Spiel erstellen</string>
    <string name="button_start_game">Spiel starten</string>
    <string name="button_create_user">Spieler erstellen</string>
    <string name="button_end_game">Spiel beenden</string>
    <string name="available_players">Verfügbare Spieler</string>
    <string name="selected_players">Ausgewählte Spieler</string>

    <string name="summary_header">Spielende</string>
    <string name="summary_table_header_name">Spieler</string>
    <string name="summary_table_header_score1"> 1</string>
    <string name="summary_table_header_score2"> 2</string>
    <string name="summary_table_header_score3"> 3</string>
    <string name="summary_table_header_score4"> 4</string>
    <string name="summary_table_header_score5"> 5</string>
    <string name="summary_table_header_score6"> 6</string>
    <string name="summary_table_header_score7"> 7</string>
    <string name="summary_table_header_score8"> 8</string>
    <string name="summary_table_header_score9"> 9</string>
    <string name="summary_table_header_score10">10</string>
    <string name="summary_table_header_score11">11</string>
    <string name="summary_table_header_score12">12</string>
    <string name="summary_table_header_sum">Summe</string>

    <string name="button_1_caption_template"> 1 (%s)</string>
    <string name="button_2_caption_template"> 2 (%s)</string>
    <string name="button_3_caption_template"> 3 (%s)</string>
    <string name="button_4_caption_template"> 4 (%s)</string>
    <string name="button_5_caption_template"> 5 (%s)</string>
    <string name="button_6_caption_template"> 6 (%s)</string>
    <string name="button_7_caption_template"> 7 (%s)</string>
    <string name="button_8_caption_template"> 8 (%s)</string>
    <string name="button_9_caption_template"> 9 (%s)</string>
    <string name="button_10_caption_template">10 (%s)</string>
    <string name="button_11_caption_template">11 (%s)</string>
    <string name="button_12_caption_template">12 (%s)</string>

    <string name="button_rematch">Revanche</string>
    <string name="button_back_to_menu">Zum Menü</string>
    <string name="player_dialog_title">Neuen Spieler erstellen</string>
    <string name="player_dialog_header">Name:</string>
    <string name="message_player_name_duplicate">Dieser Name ist bereits vergeben.</string>
    <string name="hint_player_name">Bitte einen Namen eingeben</string>

    <string name="statistics_header">Statistik</string>
    <string name="statistics_export">Export</string>
    <string name="statistics_import">Import</string>
    <string name="statistics_default_file_name">export_12er_spiel.txt</string>
    <string name="statistics_date_format">dd.MM.yyyy</string>
    <string name="statistics_date_clear">Löschen</string>
    <string name="statistics_label_time_caption">Zeitraum</string>
    <string name="statistics_label_time_start">Von:</string>
    <string name="statistics_label_time_end">Bis:</string>

    <string name="statistics_table_header_name">Spieler</string>
    <string name="statistics_table_header_match_count">Spiele</string>
    <string name="statistics_table_header_win_count">Siege</string>
    <string name="statistics_table_header_max_remains">Punkte max.</string>
    <string name="statistics_table_header_avg_remains">Punkte \u00D8</string>
    <string name="statistics_table_header_total_remains">Punkte abs.</string>
    <string name="statistics_table_name_overall">Gesamt</string>
</resources>