<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/table_row_padding">

    <TextView
        android:id="@+id/statistics_entry_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/statistics_table_header_name"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statistics_entry_match_count"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/statistics_table_header_match_count"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/statistics_entry_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statistics_entry_win_count"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/statistics_table_header_win_count"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/statistics_entry_match_count"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statistics_entry_max_remains"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/statistics_table_header_max_remains"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/statistics_entry_win_count"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statistics_entry_avg_remains"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/statistics_table_header_avg_remains"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/statistics_entry_max_remains"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statistics_entry_total_remains"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/statistics_table_header_total_remains"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/statistics_entry_avg_remains"
        app:layout_constraintTop_toTopOf="parent" />

</TableRow>