<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.StartActivity">

    <Button
        android:id="@+id/button_create_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_new_game"
        style="@style/game_primary_button"
        app:layout_constraintBottom_toTopOf="@+id/button_load_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_load_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_load_game"
        style="@style/game_primary_button"
        app:layout_constraintTop_toBottomOf="@+id/button_create_new_game"
        app:layout_constraintBottom_toTopOf="@id/button_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_statistics"
        style="@style/game_primary_button"
        app:layout_constraintTop_toBottomOf="@+id/button_load_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>